delete href .footer__link--title

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <ul class="footer__list">
           <li class="footer__item">
             <ul class="footer__item-list">
-              <li class="footer__item-title"><a class="footer__link--title" href="#">MPlayer Store</a>
+              <li class="footer__item-title"><a class="footer__link--title">MPlayer Store</a>
                 <ul class="footer__item-submenu">
                   <li class="footer__item-record"><a class="footer__link" href="#">Варианты оплаты</a></li>
                   <li class="footer__item-record"><a class="footer__link" href="#">Состояние заказа</a></li>
@@ -142,7 +142,7 @@
           <li class="footer__item">
             <!--<input class="footer__item-ac2" type="checkbox" checked>-->
             <ul class="footer__item-list">
-              <li class="footer__item-title"><a class="footer__link--title" href="#">Ценности MPlayer</a>
+              <li class="footer__item-title"><a class="footer__link--title">Ценности MPlayer</a>
 
                 <ul class="footer__item-submenu">
                   <li class="footer__item-record"><a class="footer__link" href="#">Универсальный доступ</a></li>
@@ -154,7 +154,7 @@
           </li>
           <li class="footer__item">
             <ul class="footer__item-list">
-              <li class="footer__item-title"><a class="footer__link--title" href="#">Учётная запись</a>
+              <li class="footer__item-title"><a class="footer__link--title">Учётная запись</a>
                 <ul class="footer__item-submenu">
                   <li class="footer__item-record"><a class="footer__link" href="#">Управление вашим MPlayer ID</a></li>
                   <li class="footer__item-record"><a class="footer__link" href="#">Учётная запись MPlayer Store</a></li>
